fixed white space at the end of the page on 770px and less

--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,8 @@ body {
       right: unset;
       bottom: 2rem;
       text-align: center;
-      background-color: #e30512; } }
+      background-color: #e30512;
+      z-index: 9999; } }
 
 .navigation {
   position: fixed;
@@ -212,7 +213,8 @@ body {
 @media only screen and (max-width: 1000px) {
   .section-container {
     position: relative;
-    height: 100%; } }
+    height: 100%;
+    background-color: #e30512; } }
 
 section {
   display: flex;
