--- a/sass/styles/layout/_contact.scss
+++ b/sass/styles/layout/_contact.scss
@@ -27,5 +27,6 @@
     bottom: 2rem;
     text-align: center;
     background-color: $color-red;
+    z-index: 9999;
   }
 }
