--- a/sass/styles/pages/_home.scss
+++ b/sass/styles/pages/_home.scss
@@ -28,6 +28,7 @@
   @media only screen and (max-width: 1000px) {
     position: relative;
     height: 100%;
+    background-color: $color-red;
   }
 }
 
